feat: add general styles

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Sign up</title>
+    <!-- GENERAL STYLES -->
+    <link rel="stylesheet" href="./styles/general/general.css" />
+    <!-- FORM STYLES -->
+    <link rel="stylesheet" href="./styles/general/form.css" />
   </head>
   <body>
-    <p>paragraph 1</p>
-    <p class="another-ps">paragraph 2</p>
-    <p class="another-ps" id="id-p">paragraph 3</p>
-
-    <script src="./scripts/script.js"></script>
+    <div class="fullscreen section-center margin-130">
+      <main class="form-section">hello</main>
+    </div>
   </body>
 </html>
